# mintybot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  run.sh
.github/workflows/: deploy.yml  docker-build-and-push.yml  docker-image.yml
src/: kma.rs  lib.rs  main.rs  maple.rs
src/kma/: func.rs  mod.rs  schema.rs
src/utils/: admin_commands.rs  conversation.rs  discord.rs  kma_types.rs  logger.rs  maple_types.rs  mod.rs  msg_context.rs  openai.rs  openai_schema.rs  persistence.rs  statics.rs  web.rs  web_watcher.rs
