[package]
name = "mintybot"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.12"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0.190"
serde_json = "1.0.140"
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.44.2", features = ["full"] }
lazy_static = "1.5.0"
tracing = "0.1.41"
itertools = "0.14"
tracing-subscriber = "0.3.18"
chrono = "0.4.31"
dotenv = "0.15.0"
